--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
 
 
 
-
+<app-getservice></app-getservice>
 <!-- <app-material></app-material> -->
 <!-- <app-formarray></app-formarray> -->
 <!-- <app-form-array1></app-form-array1> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
