--- a/src/app/bindingformarray/bindingformarray.component.html
+++ b/src/app/bindingformarray/bindingformarray.component.html
@@ -1,25 +1,24 @@
-<table mat-table [dataSource]="output">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column -->
+    <h2>Your Info</h2>
+    <table mat-table [dataSource]="output">
    
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="pay">
-      <th mat-header-cell *matHeaderCellDef> Pay </th>
-      <td mat-cell *matCellDef="let element"> {{element.pay}} </td>
-    </ng-container>
-  
-  
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+      
+
+        <ng-container matColumnDef="MobileNo">
+          <th mat-header-cell *matHeaderCellDef>MobileNo</th>
+          <td mat-cell *matCellDef="let element"> {{element.pay}} </td>
+        </ng-container>
+      
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      
+      </table>
+
+      <button mat-raised-button (click)="back()" color="primary">Back</button>
+
