--- a/src/app/form-array1/form-array1.component.html
+++ b/src/app/form-array1/form-array1.component.html
@@ -1,8 +1,8 @@
-<form [formGroup]="myForm" (ngSubmit)="onSubmit()" >
+<form [formGroup]="myForm" (ngSubmit)="onSubmit()" autocomplete='off'>
 
-    <h2>Welocome</h2>
+    <h1 [style.color]="'green'">Welocome</h1>
      
-    <div formArrayName="arr" *ngFor="let a of myForm.get('arr').controls; let i = index">
+    <div formArrayName="arr" *ngFor="let a of myForm.get('arr').value; let i = index">
         <div [formGroupName]="i" style="margin-bottom: 10px;">
    
     <mat-form-field appearance="fill">
@@ -11,12 +11,12 @@
     </mat-form-field>
     <br>
     <mat-form-field appearance="fill">
-        <mat-label>Payment Amount</mat-label>
-        <input matInput placeholder="Enter your payment" [formControl]="pay" required>
+        <mat-label>Enter your Mobile Number</mat-label>
+        <input matInput placeholder="Enter your Mobile Number" [formControl]="pay" required>
    </mat-form-field>
     </div>
     </div>
    <br>
-    <button mat-raised-button type="button" (click)="addItem()" style="margin-right: 5px;">Add</button>
-    <button  mat-raised-button type="submit">Submit</button>
+    <button mat-raised-button type="button" (click)="addItem()" style="margin-right: 5px;" color="warn">Add</button>
+    <button  mat-raised-button type="submit" color="primary"[disabled]="myForm.invalid">Log-in</button>
 </form>
